--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#c8a2c8" />
 		<meta name="description" content="Generate an image of an ELEPHANT on click of a button!" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/../src/assets/images/ele-logo.jpg" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/../../src/assets/images/ele-logo.jpg" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
